<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/con_vp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4F6FB"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vpv"
                    android:layout_width="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="164dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dots_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:dotsColor="#DADBE2"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="4dp"
                    app:dotsSpacing="6dp"
                    app:dotsWidthFactor="2.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vpv"
                    app:progressMode="true"
                    app:selectedDotColor="#1C3A75" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/con_rv_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/con_vp">


                <TextView
                    android:id="@+id/tv_lp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/best_deals"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tv_lp"
                    tools:listitem="@layout/item_task" />


                <TextView
                    android:id="@+id/tv_pv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/see_all"
                    android:textColor="#1C3A75"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_one" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:layout_marginTop="12dp"
                    android:background="#F4F6FB"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_pv" />

                <TextView
                    android:id="@+id/tv_obav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="13.5dp"
                    android:text="@string/updates"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line" />

                <ImageView
                    android:id="@+id/filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/filter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line"
                    android:contentDescription="@string/todo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/con_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13.5dp"
                app:layout_constraintTop_toBottomOf="@id/con_rv_r">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/con_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent">

                    <View
                        android:id="@+id/line_two"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F4F6FB"
                        app:layout_constraintTop_toTopOf="parent" />


                    <LinearLayout
                        android:id="@+id/ll_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_bly_tv_line"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/line_two">

                        <TextView
                            android:id="@+id/tv_san"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"
                            android:text="@string/_100000_160000"
                            android:textColor="#1C3A75"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/iv_gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="6.5dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="6.5dp"
                            android:src="@drawable/close"
                            android:contentDescription="@string/todo"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_bly_tv_line"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toEndOf="@id/ll_one"
                        app:layout_constraintTop_toBottomOf="@id/line_two">

                        <TextView
                            android:id="@+id/adres"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"
                            android:text="@string/golden_square"
                            android:textColor="#1C3A75"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/ref"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="6.5dp"
                            android:layout_marginEnd="12dp"
                            android:contentDescription="@string/todo"
                            android:layout_marginBottom="6.5dp"
                            android:src="@drawable/close" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_bly_tv_line"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ll_one">

                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="10dp"
                            android:layout_marginStart="14dp"
                            android:layout_marginTop="10.5dp"
                            android:layout_marginBottom="9.5dp"
                            android:src="@drawable/room_blyy"
                            android:contentDescription="@string/todo"/>

                        <TextView
                            android:id="@+id/count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"
                            android:text="@string/three"
                            android:textColor="#1C3A75"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/iv_gane_iv"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="7.5dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="6.5dp"
                            android:src="@drawable/close"
                            android:contentDescription="@string/todo"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_bly_tv_line"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toEndOf="@id/ll_three"
                        app:layout_constraintTop_toBottomOf="@id/ll_one">


                        <TextView
                            android:id="@+id/square"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"
                            android:text="@string/_100_2_180_2"
                            android:textColor="#1C3A75"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/iv_olp"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="6.5dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="6.5dp"
                            android:src="@drawable/close"
                            android:contentDescription="@string/todo"/>
                    </LinearLayout>

                    <View
                        android:id="@+id/line_thee"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="13dp"
                        android:background="#F4F6FB"
                        app:layout_constraintTop_toBottomOf="@id/ll_three" />

                    <TextView
                        android:id="@+id/tv_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/_32"
                        android:textColor="#6C7180"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/line_thee" />


                    <View
                        android:id="@+id/line_te"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#F4F6FB"
                        app:layout_constraintTop_toBottomOf="@id/tv_number" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/con_ll">

                 <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toTopOf="parent"
                    app:spanCount="2"
                    tools:listitem="@layout/item_task_two" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>